--- a/demo_portfolio/index.html
+++ b/demo_portfolio/index.html
@@ -42,7 +42,7 @@
             
             </div>
 
-            <img class="profile-pic" src="./images/WIN_20230630_00_00_54_Pro.jpg" height="200">
+            <img class="profile-pic" src="./images/pic1.png" height="200">
             <p class="desc">I am a beginner web developer<br> eager to explore and expand my knowledge in web development,<br> driven by a passion for crafting digital experiences<br> and solving problems through code. </p>
         </section>
 
